deixa xdebug desabilitado por padrão e habilita só quando o debug inicia

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -6,7 +6,7 @@ FROM php:8.0.16-apache as apache
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
-RUN echo "xdebug.mode=debug" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \    
+RUN echo "xdebug.mode=off" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \    
     echo "xdebug.idekey=VSCODE" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
     echo "xdebug.remote_connect_back=1" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
     echo "xdebug.start_with_request=yes" | tee -a /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini > /dev/null && \
