--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,9 @@
                 "max_children": 10000,
                 "max_data": 10000,
                 "show_hidden": 1
-            }
+            },
+            "preLaunchTask": "compose-debug-up",
+            "postDebugTask": "compose-debug-down"
         }
     ]
 }
